code/examples/parsing/fail/17-moves-for-0x0.gridlock
GRIDLOCK
Players: Amy, Bill.
Grid: 0x0.
Colours: red, green, blue.
Amy plays red at (0,0).
Bill plays red at (2,0).
Amy plays green at (1,1).
Amy cannot move.
Bill wins!